--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
     "react-native-snackbar": "^2.8.0",
+    "react-native-star-rating-widget": "^1.9.2",
     "react-native-vector-icons": "^10.2.0",
     "socket.io-client": "^4.8.1"
   },
