--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
     "nodemon": "^3.1.9",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "websocket-express": "^3.1.2",
     "ws": "^8.18.1"
   }
